crates/sgf-gamedata/tests/snapshots/prepare/4_4_paint_fresh_start.snap
---
source: crates/sgf-gamedata/tests/prepare.rs
expression: out
---
Prepared 3 systems for a new game
SetInitializer: 3
-system = { id = "788" name = "Raprix" position = { x = -323.73055 y = 184.48043 } initializer = distar_sealed_1_1 effect = { set_star_flag = painted_galaxy_wormhole_6 set_star_flag = empire_cluster } }
+system = { id = "788" name = "Raprix" position = { x = -323.73055 y = 184.48043 } initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_wormhole_6 set_star_flag = empire_cluster } }
-system = { id = "789" name = "Gidzerak" position = { x = -339.74518 y = 163.59981 } initializer = distar_sealed_1_2 effect = { set_star_flag = painted_galaxy_wormhole_6 set_star_flag = empire_cluster } }
+system = { id = "789" name = "Gidzerak" position = { x = -339.74518 y = 163.59981 } initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_wormhole_6 set_star_flag = empire_cluster } }
-system = { id = "790" name = "NAME_Ultima_Vigilis" position = { x = 453.05424 y = 209.25465 } initializer = surveillance_supercomputer_system }
+system = { id = "790" name = "NAME_Ultima_Vigilis" position = { x = 453.05424 y = 209.25465 } initializer = painted_galaxy_rl_basic }
