crates/sgf-gamedata/tests/snapshots/prepare/4_4_plain_fresh_start.snap
---
source: crates/sgf-gamedata/tests/prepare.rs
expression: out
---
Prepared 11 systems for a new game
SetInitializer: 11
-system = { id = "4" name = "NAME_Deneb" position = { x = 143.51 y = 9.31 } initializer = une_deneb_system spawn_weight = { base = 1 } }
+system = { id = "4" name = "NAME_Deneb" position = { x = 143.51 y = 9.31 } initializer = random_empire_init_05 spawn_weight = { base = 1 } }
-system = { id = "11" name = "VOIDWORM_SYSTEM_05" position = { x = 42.43 y = -420.36 } initializer = voidworms_spawn_system_tiny }
+system = { id = "11" name = "VOIDWORM_SYSTEM_05" position = { x = 42.43 y = -420.36 } initializer = basic_init_04 }
-system = { id = "15" name = "VOIDWORM_SYSTEM_02" position = { x = -249.08 y = 249.36 } initializer = voidworms_spawn_system_medium }
+system = { id = "15" name = "VOIDWORM_SYSTEM_02" position = { x = -249.08 y = 249.36 } initializer = basic_init_02 }
-system = { id = "20" name = "VOIDWORM_SYSTEM_11" position = { x = -94.42 y = -378.24 } initializer = voidworms_spawn_system_small }
+system = { id = "20" name = "VOIDWORM_SYSTEM_11" position = { x = -94.42 y = -378.24 } initializer = basic_init_04 }
-system = { id = "23" name = "VOIDWORM_SYSTEM_09" position = { x = 112.48 y = 324.61 } initializer = voidworms_spawn_system_large }
+system = { id = "23" name = "VOIDWORM_SYSTEM_09" position = { x = 112.48 y = 324.61 } initializer = basic_init_02 }
-system = { id = "311" name = "SPEC_Hiffnar_system" position = { x = 135.79 y = -39.69 } initializer = shattered_ring_start spawn_weight = { base = 1 } }
+system = { id = "311" name = "SPEC_Hiffnar_system" position = { x = 135.79 y = -39.69 } initializer = random_empire_init_06 spawn_weight = { base = 1 } }
-system = { id = "786" name = "Inegore" position = { x = -59.10617 y = -192.19434 } initializer = custom_starting_init_02 spawn_weight = { base = 1 } }
+system = { id = "786" name = "Inegore" position = { x = -59.10617 y = -192.19434 } initializer = random_empire_init_01 spawn_weight = { base = 1 } }
-system = { id = "787" name = "Uchbiea" position = { x = -68.89234 y = -182.12868 } initializer = custom_starting_init_02 spawn_weight = { base = 1 } }
+system = { id = "787" name = "Uchbiea" position = { x = -68.89234 y = -182.12868 } initializer = random_empire_init_02 spawn_weight = { base = 1 } }
-system = { id = "788" name = "Raprix" position = { x = -323.73055 y = 184.48043 } initializer = distar_sealed_1_1 }
+system = { id = "788" name = "Raprix" position = { x = -323.73055 y = 184.48043 } initializer = basic_init_02 }
-system = { id = "789" name = "Gidzerak" position = { x = -339.74518 y = 163.59981 } initializer = distar_sealed_1_2 }
+system = { id = "789" name = "Gidzerak" position = { x = -339.74518 y = 163.59981 } initializer = basic_init_06 }
-system = { id = "790" name = "NAME_Ultima_Vigilis" position = { x = 453.05424 y = 209.25465 } initializer = surveillance_supercomputer_system }
+system = { id = "790" name = "NAME_Ultima_Vigilis" position = { x = 453.05424 y = 209.25465 } initializer = basic_init_01 }
